# library/docs/swagger.json
@@ -475,6 +475,29 @@
                     }
                 }
             }
+        },
+        "/ping": {
+            "get": {
+                "description": "Checks server health. Returns 200 OK if server is up.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Ping the server",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
